fix: improve tooltip alignment

--- a/assets/src/css/admin/settings.scss
+++ b/assets/src/css/admin/settings.scss
@@ -299,7 +299,6 @@ div.give-field-description,
 .give-gateways-notice {
   display: table;
   width: 100%;
-  overflow: hidden;
   background: #FFF;
   margin: 15px 0 0;
   padding: 0;
